tmux.h

struct client;
struct cmd_find_state;
struct cmdq_item;
struct cmdq_list;
struct cmds;
struct control_state;
struct environ;
struct format_job_tree;
struct mouse_event;
struct session;
struct tmuxpeer;
struct winlink;
/*
 * A single key. This can be ASCII or Unicode or one of the keys between
 * KEYC_BASE and KEYC_BASE_END.
 */
typedef unsigned long long key_code;
struct utf8_data {
  u_char data[UTF8_SIZE];

  u_char have;
  u_char size;

  u_char width; /* 0xff if invalid */
};
/* Child window structure. */
struct window_pane {
  u_int id;
  u_int active_point;

  struct window *window;
  struct options *options;

  struct layout_cell *layout_cell;
  struct layout_cell *saved_layout_cell;

  u_int sx;
  u_int sy;

  u_int xoff;
  u_int yoff;

  int flags;
#define PANE_REDRAW 0x1
#define PANE_DROP 0x2
#define PANE_FOCUSED 0x4
#define PANE_VISITED 0x8
/* 0x10 unused */
/* 0x20 unused */
#define PANE_INPUTOFF 0x40
#define PANE_CHANGED 0x80
#define PANE_EXITED 0x100
#define PANE_STATUSREADY 0x200
#define PANE_STATUSDRAWN 0x400
#define PANE_EMPTY 0x800
#define PANE_STYLECHANGED 0x1000
#define PANE_UNSEENCHANGES 0x2000

  int argc;
  char **argv;
  char *shell;
  char *cwd;

  pid_t pid;
  char tty[TTY_NAME_MAX];
  int status;
  struct timeval dead_time;

  int fd;
  struct bufferevent *event;

  struct window_pane_offset offset;
  size_t base_offset;

  struct window_pane_resizes resize_queue;
  struct event resize_timer;

  struct input_ctx *ictx;

  struct grid_cell cached_gc;
  struct grid_cell cached_active_gc;
  struct colour_palette palette;

  int pipe_fd;
  struct bufferevent *pipe_event;
  struct window_pane_offset pipe_offset;

  struct screen *screen;
  struct screen base;

  struct screen status_screen;
  size_t status_size;

  TAILQ_HEAD(, window_mode_entry) modes;

  char *searchstr;
  int searchregex;

  int border_gc_set;
  struct grid_cell border_gc;

  int control_bg;
  int control_fg;

  TAILQ_ENTRY(window_pane) entry;  /* link in list of all panes */
  TAILQ_ENTRY(window_pane) sentry; /* link in list of last visited */
  RB_ENTRY(window_pane) tree_entry;
};
/* Window structure. */
struct window {
  u_int id;
  void *latest;

  char *name;
  struct event name_event;
  struct timeval name_time;

  struct event alerts_timer;
  struct event offset_timer;

  struct timeval activity_time;

  struct window_pane *active;
  struct window_panes last_panes;
  struct window_panes panes;

  int lastlayout;
  struct layout_cell *layout_root;
  struct layout_cell *saved_layout_root;
  char *old_layout;

  u_int sx;
  u_int sy;
  u_int manual_sx;
  u_int manual_sy;
  u_int xpixel;
  u_int ypixel;

  u_int new_sx;
  u_int new_sy;
  u_int new_xpixel;
  u_int new_ypixel;

  struct utf8_data *fill_character;
  int flags;
#define WINDOW_BELL 0x1
#define WINDOW_ACTIVITY 0x2
#define WINDOW_SILENCE 0x4
#define WINDOW_ZOOMED 0x8
#define WINDOW_WASZOOMED 0x10
#define WINDOW_RESIZE 0x20
#define WINDOW_ALERTFLAGS (WINDOW_BELL | WINDOW_ACTIVITY | WINDOW_SILENCE)

  int alerts_queued;
  TAILQ_ENTRY(window) alerts_entry;

  struct options *options;

  u_int references;
  TAILQ_HEAD(, winlink) winlinks;

  RB_ENTRY(window) entry;
};
/* Entry on local window list. */
struct winlink {
  int idx;
  struct session *session;
  struct window *window;

  int flags;
#define WINLINK_BELL 0x1
#define WINLINK_ACTIVITY 0x2
#define WINLINK_SILENCE 0x4
#define WINLINK_ALERTFLAGS (WINLINK_BELL | WINLINK_ACTIVITY | WINLINK_SILENCE)
#define WINLINK_VISITED 0x8

  RB_ENTRY(winlink) entry;
  TAILQ_ENTRY(winlink) wentry;
  TAILQ_ENTRY(winlink) sentry;
};
struct session {
  u_int id;

  char *name;
  const char *cwd;

  struct timeval creation_time;
  struct timeval last_attached_time;
  struct timeval activity_time;
  struct timeval last_activity_time;

  struct event lock_timer;

  struct winlink *curw;
  struct winlink_stack lastw;
  struct winlinks windows;

  int statusat;
  u_int statuslines;

  struct options *options;

#define SESSION_PASTING 0x1
#define SESSION_ALERTED 0x2
  int flags;

  u_int attached;

  struct termios *tio;

  struct environ *environ;

  int references;

  TAILQ_ENTRY(session) gentry;
  RB_ENTRY(session) entry;
};
/* Mouse input. */
struct mouse_event {
  int valid;
  int ignore;

  key_code key;

  int statusat;
  u_int statuslines;

  u_int x;
  u_int y;
  u_int b;

  u_int lx;
  u_int ly;
  u_int lb;

  u_int ox;
  u_int oy;

  int s;
  int w;
  int wp;

  u_int sgr_type;
  u_int sgr_b;
};
/* Key event. */
struct key_event {
  key_code key;
  struct mouse_event m;
};
/* Client terminal. */
struct tty {
  struct client *client;
  struct event start_timer;
  struct event clipboard_timer;
  time_t last_requests;

  u_int sx;
  u_int sy;
  /* Cell size in pixels. */
  u_int xpixel;
  u_int ypixel;

  u_int cx;
  u_int cy;
  enum screen_cursor_style cstyle;
  int ccolour;

  /* Properties of the area being drawn on. */
  /* When true, the drawing area is bigger than the terminal. */
  int oflag;
  u_int oox;
  u_int ooy;
  u_int osx;
  u_int osy;

  int mode;
  int fg;
  int bg;

  u_int rlower;
  u_int rupper;

  u_int rleft;
  u_int rright;

  struct event event_in;
  struct evbuffer *in;
  struct event event_out;
  struct evbuffer *out;
  struct event timer;
  size_t discarded;

  struct termios tio;

  struct grid_cell cell;
  struct grid_cell last_cell;

#define TTY_NOCURSOR 0x1
#define TTY_FREEZE 0x2
#define TTY_TIMER 0x4
#define TTY_NOBLOCK 0x8
#define TTY_STARTED 0x10
#define TTY_OPENED 0x20
#define TTY_OSC52QUERY 0x40
#define TTY_BLOCK 0x80
#define TTY_HAVEDA 0x100 /* Primary DA. */
#define TTY_HAVEXDA 0x200
#define TTY_SYNCING 0x400
#define TTY_HAVEDA2 0x800 /* Secondary DA. */
#define TTY_ALL_REQUEST_FLAGS (TTY_HAVEDA | TTY_HAVEDA2 | TTY_HAVEXDA)
  int flags;

  struct tty_term *term;

  u_int mouse_last_x;
  u_int mouse_last_y;
  u_int mouse_last_b;
  int mouse_drag_flag;
  void (*mouse_drag_update)(struct client *, struct mouse_event *);
  void (*mouse_drag_release)(struct client *, struct mouse_event *);

  struct event key_timer;
  struct tty_key *key_tree;
};
struct cmd_find_state {
  int flags;
  struct cmd_find_state *current;

  struct session *s;
  struct winlink *wl;
  struct window *w;
  struct window_pane *wp;
  int idx;
};
/* List of commands. */
struct cmd_list {
  int references;
  u_int group;
  struct cmds *list;
};
struct status_line {
  struct event timer;

  struct screen screen;
  struct screen *active;
  int references;

  struct grid_cell style;
  struct status_line_entry entries[STATUS_LINES_LIMIT];
};
enum prompt_type {
  PROMPT_TYPE_COMMAND,
  PROMPT_TYPE_SEARCH,
  PROMPT_TYPE_TARGET,
  PROMPT_TYPE_WINDOW_TARGET,
  PROMPT_TYPE_INVALID = 0xff
};
/* Client connection. */
typedef int (*prompt_input_cb)(struct client *, void *, const char *, int);
typedef void (*prompt_free_cb)(void *);
typedef void (*overlay_check_cb)(struct client *, void *, u_int, u_int, u_int,
                                 struct overlay_ranges *);
typedef struct screen *(*overlay_mode_cb)(struct client *, void *, u_int *,
                                          u_int *);
typedef void (*overlay_draw_cb)(struct client *, void *,
                                struct screen_redraw_ctx *);
typedef int (*overlay_key_cb)(struct client *, void *, struct key_event *);
typedef void (*overlay_free_cb)(struct client *, void *);
typedef void (*overlay_resize_cb)(struct client *, void *);
struct client {
  const char *name;
  struct tmuxpeer *peer;
  struct cmdq_list *queue;

  struct client_windows windows;

  struct control_state *control_state;
  u_int pause_age;

  pid_t pid;
  int fd;
  int out_fd;
  struct event event;
  int retval;

  struct timeval creation_time;
  struct timeval activity_time;

  struct environ *environ;
  struct format_job_tree *jobs;

  char *title;
  char *path;
  const char *cwd;

  char *term_name;
  int term_features;
  char *term_type;
  char **term_caps;
  u_int term_ncaps;

  char *ttyname;
  struct tty tty;

  size_t written;
  size_t discarded;
  size_t redraw;

  struct event repeat_timer;

  struct event click_timer;
  u_int click_button;
  struct mouse_event click_event;

  struct status_line status;

#define CLIENT_TERMINAL 0x1
#define CLIENT_LOGIN 0x2
#define CLIENT_EXIT 0x4
#define CLIENT_REDRAWWINDOW 0x8
#define CLIENT_REDRAWSTATUS 0x10
#define CLIENT_REPEAT 0x20
#define CLIENT_SUSPENDED 0x40
#define CLIENT_ATTACHED 0x80
#define CLIENT_EXITED 0x100
#define CLIENT_DEAD 0x200
#define CLIENT_REDRAWBORDERS 0x400
#define CLIENT_READONLY 0x800
#define CLIENT_NOSTARTSERVER 0x1000
#define CLIENT_CONTROL 0x2000
#define CLIENT_CONTROLCONTROL 0x4000
#define CLIENT_FOCUSED 0x8000
#define CLIENT_UTF8 0x10000
#define CLIENT_IGNORESIZE 0x20000
#define CLIENT_IDENTIFIED 0x40000
#define CLIENT_STATUSFORCE 0x80000
#define CLIENT_DOUBLECLICK 0x100000
#define CLIENT_TRIPLECLICK 0x200000
#define CLIENT_SIZECHANGED 0x400000
#define CLIENT_STATUSOFF 0x800000
#define CLIENT_REDRAWSTATUSALWAYS 0x1000000
#define CLIENT_REDRAWOVERLAY 0x2000000
#define CLIENT_CONTROL_NOOUTPUT 0x4000000
#define CLIENT_DEFAULTSOCKET 0x8000000
#define CLIENT_STARTSERVER 0x10000000
#define CLIENT_REDRAWPANES 0x20000000
#define CLIENT_NOFORK 0x40000000
#define CLIENT_ACTIVEPANE 0x80000000ULL
#define CLIENT_CONTROL_PAUSEAFTER 0x100000000ULL
#define CLIENT_CONTROL_WAITEXIT 0x200000000ULL
#define CLIENT_WINDOWSIZECHANGED 0x400000000ULL
#define CLIENT_CLIPBOARDBUFFER 0x800000000ULL
#define CLIENT_BRACKETPASTING 0x1000000000ULL
#define CLIENT_ALLREDRAWFLAGS                                                  \
  (CLIENT_REDRAWWINDOW | CLIENT_REDRAWSTATUS | CLIENT_REDRAWSTATUSALWAYS |     \
   CLIENT_REDRAWBORDERS | CLIENT_REDRAWOVERLAY | CLIENT_REDRAWPANES)
#define CLIENT_UNATTACHEDFLAGS (CLIENT_DEAD | CLIENT_SUSPENDED | CLIENT_EXIT)
#define CLIENT_NODETACHFLAGS (CLIENT_DEAD | CLIENT_EXIT)
#define CLIENT_NOSIZEFLAGS (CLIENT_DEAD | CLIENT_SUSPENDED | CLIENT_EXIT)
  uint64_t flags;

  enum {
    CLIENT_EXIT_RETURN,
    CLIENT_EXIT_SHUTDOWN,
    CLIENT_EXIT_DETACH
  } exit_type;
  enum msgtype exit_msgtype;
  char *exit_session;
  char *exit_message;

  struct key_table *keytable;

  uint64_t redraw_panes;

  int message_ignore_keys;
  int message_ignore_styles;
  char *message_string;
  struct event message_timer;

  char *prompt_string;
  struct utf8_data *prompt_buffer;
  char *prompt_last;
  size_t prompt_index;
  prompt_input_cb prompt_inputcb;
  prompt_free_cb prompt_freecb;
  void *prompt_data;
  u_int prompt_hindex[PROMPT_NTYPES];
  enum { PROMPT_ENTRY, PROMPT_COMMAND } prompt_mode;
  struct utf8_data *prompt_saved;
#define PROMPT_SINGLE 0x1
#define PROMPT_NUMERIC 0x2
#define PROMPT_INCREMENTAL 0x4
#define PROMPT_NOFORMAT 0x8
#define PROMPT_KEY 0x10
  int prompt_flags;
  enum prompt_type prompt_type;
  int prompt_cursor;

  struct session *session;
  struct session *last_session;

  int references;

  void *pan_window;
  u_int pan_ox;
  u_int pan_oy;

  overlay_check_cb overlay_check;
  overlay_mode_cb overlay_mode;
  overlay_draw_cb overlay_draw;
  overlay_key_cb overlay_key;
  overlay_free_cb overlay_free;
  overlay_resize_cb overlay_resize;
  void *overlay_data;
  struct event overlay_timer;

  struct client_files files;

  u_int *clipboard_panes;
  u_int clipboard_npanes;

  TAILQ_ENTRY(client) entry;
};
/* Key binding and key table. */
struct key_binding {
  key_code key;
  struct cmd_list *cmdlist;
  const char *note;

  int flags;
#define KEY_BINDING_REPEAT 0x1

  RB_ENTRY(key_binding) entry;
};
struct key_table {
  const char *name;
  struct timeval activity_time;
  struct key_bindings key_bindings;
  struct key_bindings default_key_bindings;

  u_int references;

  RB_ENTRY(key_table) entry;
};
struct tmuxpeer *proc_add_peer(struct tmuxproc *, int,
                               void (*)(struct imsg *, void *), void *);
/* key-bindings.c */
struct key_table *key_bindings_get_table(const char *, int);
struct key_table *key_bindings_first_table(void);
struct key_table *key_bindings_next_table(struct key_table *);
void key_bindings_unref_table(struct key_table *);
struct key_binding *key_bindings_get(struct key_table *, key_code);
struct key_binding *key_bindings_get_default(struct key_table *, key_code);
struct key_binding *key_bindings_first(struct key_table *);
struct key_binding *key_bindings_next(struct key_table *, struct key_binding *);
void key_bindings_add(const char *, key_code, const char *, int,
                      struct cmd_list *);
void key_bindings_remove(const char *, key_code);
void key_bindings_reset(const char *, key_code);
void key_bindings_remove_table(const char *);
void key_bindings_reset_table(const char *);
void key_bindings_init(void);
struct cmdq_item *key_bindings_dispatch(struct key_binding *,
                                        struct cmdq_item *, struct client *,
                                        struct key_event *,
                                        struct cmd_find_state *);